--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>碎念个人引导页</title>
+		<title>雨中一条柴个人引导页</title>
 		<meta name="description" content="那些暗潮汹涌的 见不得人的 无法诉之于口的才是我真正的生活|关键词：Suinian,Nianbroken" />
 		<meta charset="utf-8" />
 		<meta http-equiv="content-language" content="zh-cn" />
@@ -18,20 +18,20 @@
 			<!-- Header -->
 			<header id="header">
 				<div class="icon">
-					<img src="images/icon-fa-gem.png" alt="碎念个人引导页" title="碎念个人引导页" class="logo" />
+					<img src="images/icon-fa-gem.png" alt="雨中一条柴个人引导页" title="雨中一条柴个人引导页" class="logo" />
 				</div>
 				<div class="content">
 					<div class="inner">
-						<h1>碎念个人引导页</h1>
+						<h1>雨中一条柴个人引导页</h1>
 						<p>她只是途经我留下了星火&nbsp;而我却任凭它焚烧了我整个荒原</p>
 					</div>
 				</div>
 				<nav>
 					<ul>
-						<li><a target="_blank" href="https://eugnaa.eu-gov.eu.org/">EUGNAA</a></li>
-						<li><a target="_blank" href="https://blog.nianbroken.top/">碎念博客</a></li>
-						<li><a target="_blank" href="https://chat.nianbroken.top/">灵巧AI</a></li>
-						<li><a target="_blank" href="https://pan.nianbroken.top/">碎念云盘</a></li>
+						<li><a target="_blank" href="https://www.techcat.cc/">导航页</a></li>
+						<li><a target="_blank" href="https://blog.techcat.cc/">博客</a></li>
+						<li><a target="_blank" href="https://linux.techcat.cc/">Linux命令</a></li>
+						<li><a target="_blank" href="https://reference.techcat.cc/">快速参考</a></li>
 						<li><a target="_blank" href="https://url.nianbroken.top/">短链生成</a></li>
 						<li><a target="_blank" href="https://baidu.nianbroken.top/">帮你百度</a></li>
 						<li><a target="_blank" href="https://fireworks.nianbroken.top/">烟花模拟</a></li>
